# protomorph

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/models/: grunt.blend  grunt.fbx  masterchief_fp_assault_rifle.blend  plane2.fbx
assets/shaders/: blit.wgsl  bloom.wgsl  bloom_downsample.wgsl  bloom_upsample.wgsl  cloud_composite.wgsl  cloud_noise.wgsl  cloud_raymarch.wgsl  cubemap_debug.wgsl  depth_prepass.wgsl  depth_prepass_skinned.wgsl  emissive_forward.wgsl  emissive_forward_skinned.wgsl  env_mip_downsample.wgsl  env_probe_forward.wgsl  env_probe_forward_skinned.wgsl  env_probe_sky.wgsl  fxaa.wgsl  geometry.wgsl  geometry_skinned.wgsl  god_rays.wgsl  god_rays_composite.wgsl  lens_flare.wgsl  lighting.wgsl  shadow.wgsl  shadow_skinned.wgsl  sky.wgsl  ssao.wgsl  ssao_blur.wgsl  water.wgsl
assets/textures/water/: foam.dds
docs/: clouds.md  render_passes.md  unified_plan.md  water.md
src/: animation.rs  camera.rs  collision.rs  dds.rs  game.rs  gpu_types.rs  lights.rs  main.rs  materials.rs  model.rs  models.rs  objects.rs  sky.rs
src/renderer/: bloom.rs  bloom_pass.rs  cloud_composite.rs  cloud_noise.rs  cloud_raymarch.rs  cubemap_debug.rs  cubemap_debug_pass.rs  env_probe.rs  env_probe_pass.rs  final_composite.rs  fxaa.rs  fxaa_pass.rs  geometry.rs  geometry_pass.rs  god_rays.rs  god_rays_pass.rs  helpers.rs  lighting.rs  lighting_pass.rs  mod.rs  shadow.rs  shadow_pass.rs  shared.rs  sky_pass.rs  ssao.rs  ssao_blur.rs  ssao_blur_pass.rs  ssao_pass.rs  text.rs  text_pass.rs  water.rs
