[package]
name = "protomorph"
version = "0.1.0"
edition = "2024"

[features]
static = ["asset-importer/static-link"]

[dependencies]
asset-importer = "0.7"
bitflags = "2"
bytemuck = { version = "1.24", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
glam = { version = "0.32", features = ["bytemuck"] }
glyphon = "0.10"
pollster = "0.4"
rand = "0.9"
wgpu = "28.0"
winit = "0.30"
